# whisk

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
installer/: whisk.iss
integration_test/: simple_test.dart
lib/: main.dart
lib/data/repositories/: environment_catalog.dart
lib/data/services/: app_window_service.dart  collaboration_service.dart  collaboration_service_mock.dart  collaboration_service_p2p.dart  collaboration_transport.dart  collection_service.dart  document_render_service.dart  document_render_service_io.dart  document_render_service_stub.dart  engine_provision_service.dart  engine_provision_service_io.dart  engine_provision_service_stub.dart  file_watcher_service.dart  invite_codec.dart  local_collaboration_transport.dart  pinned_project_service.dart  settings_service.dart  (+8 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: collaboration.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_whisk.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_whisk.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/collaboration/: collaboration_service_p2p_test.dart
test/editor/: whisk_editor_controller_test.dart
test/workspace/: workspace_view_model_test.dart
tool/: build_and_package.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+63 files in other folders)
