[package]
name = "rust_lib_whisk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
iroh = "0.98.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
yrs = "0.26.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
